# dobby-cocos2djs-hook

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  frida_hook.js
.github/workflows/: build.yml
jni/: Android.mk  Application.mk  hook.cpp
scripts/: decrypt_jsc.py  frida_dump.py  inject_apk.py
